--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 </head>
 <body>
  <header>
-        <img src="/imgs/ESports_Logo.png" alt="logo"
+        <img src="/imgs/ESports_Logo.png" alt="logo">
+        <h1>ESports</h1>
  </header>   
 </body>
 </html>
