--- a/index.html
+++ b/index.html
@@ -3,12 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>ESport</title>
 </head>
 <body>
  <header>
         <img src="/imgs/ESports_Logo.png" alt="logo">
-        <h1>ESports</h1>
- </header>   
+        <nav>
+            <ul>
+                <li><a href="/index.html"> Página Inicial</a></li>
+                <li><a href="/Esporte/Basquete/index.html">Basquete</a></li>
+                <li><a href="/Esporte/Futebol/index.html"> Futebol</a></li>
+                <li><a href="/Esporte/Volei/index.html">Vôlei</a></li>
+
+
+            </ul>
+
+        </nav>
+
+    
+ </header>
+   <h1>ESports</h1>   
 </body>
 </html>
