mensagem de commit

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
                 <li><a href="/Esporte/Volei/index.html">Vôlei</a></li>
             </ul>
         </nav>
- </header>  
+ </header>
+ <h2> Informções sobre o basquete</h2> 
+ <p>Baquete é um  jogo é disputado por duas equipes de cinco jogadores que tem por objetivo passar a bola por dentro do cesto disposto nas extremidades do campo.</p> 
+ 
 </body>
 </html>
