mensagem de commit

--- a/index.html
+++ b/index.html
@@ -18,8 +18,47 @@
             </ul>
         </nav>
  </header>
- <h2> Informções sobre o basquete</h2> 
- <p>Baquete é um  jogo é disputado por duas equipes de cinco jogadores que tem por objetivo passar a bola por dentro do cesto disposto nas extremidades do campo.</p> 
+ 
+ <a href="esporte/futebol/index.html", ></a> <p> <img class="fotos" src="imgs/imagem1.jpeg" width="200" height="200"> </p> <img class="fotos" src="imgs/imagem2.jpeg" width="200" height="200">0
+ <iframe class="fotos" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d239.50118712152957!2d-42.2940328979526!3d-16.16797081585057!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x74debc06ad96c1d%3A0xaf75763d6c1598f1!2sBR-342%2C%20154%20-%20Salinas%2C%20MG%2C%2039560-000!5e0!3m2!1spt-BR!2sbr!4v1698458812799!5m2!1spt-BR!2sbr" width="500" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"> </iframe> <br>
+
+</div>
+</ul>
+
+<ul class="sitefont">
+
+ <h1> Produtos em destaque </h1>
+
+<div class="produtos">
+
+ <a href="esporte/basquete/index.html", ><img class="fotos"  src="imgs/bola_basquete.jpg" width="350" height="350"> </a> 
+ <p> Bola de Basquete Profissional Wilson <br> Valor: R$79,06 <br> Frete GRATIS </p>
+ <a href="esporte/futebol/index.html", ><img class="fotos" src="imgs/bola_futebol.jpg" width="350" height="350"> </a> 
+ <p> Bola de Futebol Profissional Adidas <br> Valor: R$58,97 <br> Frete GRATIS </p>
+ <a href="esporte/volei/index.html", ><img class="fotos" src="imgs/mikasa.jpg" width="350" height="350""> </a> 
+ <p> Bola de Vôlei Mikasa <br> Valor: R$635,09 <br> Frete GRÁTIS </p>
+
+</div>
+
+ <h2>Sobre nossa Loja </h2>
+
+<div class="texto"> 
+ <p> 
+ GG-Sports é uma loja de materiais esportivos com uma ampla variedade de produtos de alta qualidade para atender atletas e entusiastas de esportes de todas as modalidades. Com um ambiente acolhedor, equipe experiente e compromisso com a comunidade esportiva, a loja se destaca como um destino de escolha para quem busca equipamentos esportivos de qualidade.
+ </p> 
+ <hr>
+ 
+ <h3> Metodos de Pagamento </h3>
+ <p>
+   Aceitamos pagamento no cartão (crédito ou débito) ou no PIX!
+ </p>
+ <hr>
+ <h3> Proprietario </h3>
+ 
+   <br>
+
+</div>
+</ul>
  
 </body>
 </html>
