--- a/index.html
+++ b/index.html
@@ -19,46 +19,49 @@
         </nav>
  </header>
  
- <a href="esporte/futebol/index.html", ></a> <p> <img class="fotos" src="imgs/imagem1.jpeg" width="200" height="200"> </p> <img class="fotos" src="imgs/imagem2.jpeg" width="200" height="200">0
- <iframe class="fotos" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d239.50118712152957!2d-42.2940328979526!3d-16.16797081585057!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x74debc06ad96c1d%3A0xaf75763d6c1598f1!2sBR-342%2C%20154%20-%20Salinas%2C%20MG%2C%2039560-000!5e0!3m2!1spt-BR!2sbr!4v1698458812799!5m2!1spt-BR!2sbr" width="500" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"> </iframe> <br>
+ <ul>
 
-</div>
+    <h1> Nossa Loja </h1>
+  <div>
+
+    <a href="esporte/futebol/index.html", ></a> <p> <img class="fotos" src="imgs/imagem1.jpeg" width="200" height="200"> </p> <img class="fotos" src="imgs/imagem2.jpeg" width="200" height="200">0
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15328.867470345154!2d-42.327755692187516!3d-16.157762899999998!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x74debf0b63fd265%3A0xd64db0172cd62beb!2sIFNMG%20-%20Instituto%20Federal%20do%20Norte%20de%20Minas%20Gerais%2C%20Campus%20Salinas!5e0!3m2!1spt-BR!2sbr!4v1723201069247!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+  </div>
+  </ul>
+
+  <ul class="sitefont">
+
+    <h1> Produtos em destaque </h1>
+
+  <div class="produtos">
+
+    <a href="esporte/basquete/index.html", ><img class="fotos"  src="imgs/basquete.jpg" width="350" height="350"> </a> 
+    <p> Bola de Basquete Profissional Wilson <br> Valor: R$79,06 <br> Frete GRATIS </p>
+    <a href="esporte/futebol/index.html", ><img class="fotos" src="imgs/bola_de_futebol.webp" width="350" height="350"> </a> 
+    <p> Bola de Futebol Profissional Adidas <br> Valor: R$58,97 <br> Frete GRATIS </p>
+    <a href="esporte/volei/index.html", ><img class="fotos" src="imgs/mikasa.jpg" width="350" height="350""> </a> 
+    <p> Bola de Vôlei Mikasa <br> Valor: R$635,09 <br> Frete GRÁTIS </p>
+
+  </div>
+  
+    <h2>Sobre nossa Loja </h2>
+
+  <div class="texto"> 
+    <p> 
+    ESports é uma loja de materiais esportivos com uma ampla variedade de produtos de alta qualidade para atender atletas e entusiastas de esportes de todas as modalidades. Com um ambiente acolhedor, equipe experiente e compromisso com a comunidade esportiva, a loja se destaca como um destino de escolha para quem busca equipamentos esportivos de qualidade.
+    </p> 
+    <hr>
+    
+    <h3> Metodos de Pagamento </h3>
+    <p>
+      Aceitamos pagamento no cartão (crédito ou débito) ou no PIX!
+    </p>
+    <hr>
+    <h3> Proprietario </h3>
+    <p>
+      Kauê Lion Franca Matos <br>
+    </p>
+  </div>
 </ul>
-
-<ul class="sitefont">
-
- <h1> Produtos em destaque </h1>
-
-<div class="produtos">
-
- <a href="esporte/basquete/index.html", ><img class="fotos"  src="imgs/bola_basquete.jpg" width="350" height="350"> </a> 
- <p> Bola de Basquete Profissional Wilson <br> Valor: R$79,06 <br> Frete GRATIS </p>
- <a href="esporte/futebol/index.html", ><img class="fotos" src="imgs/bola_futebol.jpg" width="350" height="350"> </a> 
- <p> Bola de Futebol Profissional Adidas <br> Valor: R$58,97 <br> Frete GRATIS </p>
- <a href="esporte/volei/index.html", ><img class="fotos" src="imgs/mikasa.jpg" width="350" height="350""> </a> 
- <p> Bola de Vôlei Mikasa <br> Valor: R$635,09 <br> Frete GRÁTIS </p>
-
-</div>
-
- <h2>Sobre nossa Loja </h2>
-
-<div class="texto"> 
- <p> 
- GG-Sports é uma loja de materiais esportivos com uma ampla variedade de produtos de alta qualidade para atender atletas e entusiastas de esportes de todas as modalidades. Com um ambiente acolhedor, equipe experiente e compromisso com a comunidade esportiva, a loja se destaca como um destino de escolha para quem busca equipamentos esportivos de qualidade.
- </p> 
- <hr>
- 
- <h3> Metodos de Pagamento </h3>
- <p>
-   Aceitamos pagamento no cartão (crédito ou débito) ou no PIX!
- </p>
- <hr>
- <h3> Proprietario </h3>
- 
-   <br>
-
-</div>
-</ul>
- 
 </body>
 </html>
