mensagem de commit

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
  
  <ul>
 
-    <h1> Nossa Loja </h1>
+    <h1> Local do estabelecimento </h1>
   <div>
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15328.867470345154!2d-42.327755692187516!3d-16.157762899999998!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x74debf0b63fd265%3A0xd64db0172cd62beb!2sIFNMG%20-%20Instituto%20Federal%20do%20Norte%20de%20Minas%20Gerais%2C%20Campus%20Salinas!5e0!3m2!1spt-BR!2sbr!4v1723201069247!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
   </div>
@@ -34,9 +34,9 @@
   <div class="produtos">
 
     <a href="esporte/basquete/index.html", ><img class="fotos"  src="imgs/basquete.jpg" width="350" height="350"> </a> 
-    <p> Bola de Basquete Profissional Wilson <br> Valor: R$79,06 <br> Frete GRATIS </p>
+    <p> Bola de Basquete Profissional Wilson <br> Valor: R$79,06 <br> !Frete GRÁTIS! </p>
     <a href="esporte/futebol/index.html", ><img class="fotos" src="imgs/bola_de_futebol.webp" width="350" height="350"> </a> 
-    <p> Bola de Futebol Profissional Adidas <br> Valor: R$58,97 <br> Frete GRATIS </p>
+    <p> Bola de Futebol Profissional Adidas <br> Valor: R$58,97 <br> !Frete GRÁTIS! </p>
     <a href="esporte/volei/index.html", ><img class="fotos" src="imgs/mikasa.jpg" width="350" height="350""> </a> 
     <p> Bola de Vôlei Mikasa <br> Valor: R$635,09 <br> Frete GRÁTIS </p>
 
@@ -55,7 +55,7 @@
       Aceitamos pagamento no cartão (crédito ou débito) ou no PIX!
     </p>
     <hr>
-    <h3> Proprietario </h3>
+    <h3> Proprietario do estabelecimento</h3>
     <p>
       Kauê Lion Franca Matos <br>
     </p>
