mensagem de commit

--- a/index.html
+++ b/index.html
@@ -29,16 +29,16 @@
 
   <ul class="sitefont">
 
-    <h1> Produtos em destaque </h1>
+    <h1> PRODUTOS EM DESTAQUE </h1>
 
   <div class="produtos">
 
     <a href="esporte/basquete/index.html", ><img class="fotos"  src="imgs/basquete.jpg" width="350" height="350"> </a> 
-    <p> Bola de Basquete Profissional Wilson <br> Valor: R$79,06 <br> !Frete GRÁTIS! </p>
+    <p> Bola de Basquete Profissional Wilson Valor: R$79,06 !Frete GRÁTIS! </p>
     <a href="esporte/futebol/index.html", ><img class="fotos" src="imgs/bola_de_futebol.webp" width="350" height="350"> </a> 
-    <p> Bola de Futebol Profissional Adidas <br> Valor: R$58,97 <br> !Frete GRÁTIS! </p>
+    <p> Bola de Futebol Profissional Adidas  Valor: R$58,97  !Frete GRÁTIS! </p>
     <a href="esporte/volei/index.html", ><img class="fotos" src="imgs/mikasa.jpg" width="350" height="350""> </a> 
-    <p> Bola de Vôlei Mikasa <br> Valor: R$635,09 <br> Frete GRÁTIS </p>
+    <p> Bola de Vôlei Mikasa  Valor: R$635,09 Frete GRÁTIS </p>
 
   </div>
   
@@ -57,7 +57,7 @@
     <hr>
     <h3> Proprietario do estabelecimento</h3>
     <p>
-      Kauê Lion Franca Matos <br>
+      Kauê Lion Franca Matos 
     </p>
   </div>
 </ul>
