mensagem de commit

--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
 
   <div class="produtos">
 
-    <a href="esporte/basquete/index.html", ><img class="fotos"  src="imgs/basquete.jpg" width="350" height="350"> </a> 
-    <p> Bola de Basquete Profissional Wilson Valor: R$79,06 !Frete GRÁTIS! </p>
-    <a href="esporte/futebol/index.html", ><img class="fotos" src="imgs/bola_de_futebol.webp" width="350" height="350"> </a> 
-    <p> Bola de Futebol Profissional Adidas  Valor: R$58,97  !Frete GRÁTIS! </p>
-    <a href="esporte/volei/index.html", ><img class="fotos" src="imgs/mikasa.jpg" width="350" height="350""> </a> 
-    <p> Bola de Vôlei Mikasa  Valor: R$635,09 Frete GRÁTIS </p>
+    <a href="esporte/basquete/index.html", ><img class="fotos"  src="imgs/basquete.jpg" width="300" height="300"> </a> 
+    <p> Bola de Basquete Profissional Wilson <br> Valor: R$79,06 <br>!Frete GRÁTIS! </p>
+    <a href="esporte/futebol/index.html", ><img class="fotos" src="imgs/bola_de_futebol.webp" width="300" height="300"> </a> 
+    <p> Bola de Futebol Profissional Adidas <br> Valor: R$58,97 <br> !Frete GRÁTIS! </p>
+    <a href="esporte/volei/index.html", ><img class="fotos" src="imgs/mikasa.jpg" width="300" height="300""> </a> 
+    <p> Bola de Vôlei Mikasa <br> Valor: R$635,09 <br> !Frete GRÁTIS! </p>
 
   </div>
   
@@ -46,14 +46,18 @@
 
   <div class="texto"> 
     <p> 
-    ESports é uma loja de materiais esportivos com uma ampla variedade de produtos de alta qualidade para atender atletas e entusiastas de esportes de todas as modalidades. Com um ambiente acolhedor, equipe experiente e compromisso com a comunidade esportiva, a loja se destaca como um destino de escolha para quem busca equipamentos esportivos de qualidade.
+    ESports é uma loja de materiais esportivos com uma ampla variedade de produtos de alta qualidade para atender atletas e entusiastas de esportes de todas as modalidades. Com um ambiente acolhedor, equipe experiente e compromisso com a comunidade esportiva, <br> a loja se destaca como um destino de escolha para quem busca equipamentos esportivos de qualidade.
     </p> 
     <hr>
     
     <h3> Metodos de Pagamento </h3>
-    <p>
-      Aceitamos pagamento no cartão (crédito ou débito) ou no PIX!
-    </p>
+    <ul>
+       <li> Cartão de Crédito</li>
+       <li> Débito</li>
+       <li> Boleto </li>
+       <img class="fotos" src="imgs/pagamentos.png" width="300" height="300"">
+    </ul>
+    
     <hr>
     <h3> Proprietario do estabelecimento</h3>
     <p>
