mensagem de commit

--- a/Esporte/Basquete/index.html
+++ b/Esporte/Basquete/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Basquete</title>
+    <title>E-Sport - Basquete</title>
 </head>
 <body>
     <header>
         <img src="/imgs/ESports_Logo.png" alt="logo">
-        <h1>ESports</h1> 
+        <h1>E-Sports</h1> 
         <nav>
             <ul>
                 <li><a href="/index.html"> Página Inicial</a></li>
@@ -16,6 +16,12 @@
                 <li><a href="/Esporte/Volei/index.html">Vôlei</a></li>
             </ul>
         </nav>
- </header> 
+ </header>
+      <h2> Informações sobre o basquete </h2>
+      <p> O basquete é um esporte coletivo jogado por duas equipes de cinco jogadores. O objetivo é marcar pontos arremessando a bola através do aro adversário, que está a 3,05 metros de altura. A partida ocorre em uma quadra retangular e é marcada por rápidas transições entre ataque e defesa. Os jogadores utilizam habilidades como drible, passe e arremesso, e o jogo é conhecido por sua intensidade e ação contínua. É praticado em diversos níveis, desde competições locais até torneios internacionais como a NBA e os Jogos Olímpicos.
+      <p><a href= "https://brasilescola.uol.com.br/educacao-fisica/basquetebol.htm"<</p>
+
+
+      </p>
 </body>
 </html>
