--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
   <div class="texto"> 
     <p> 
-    ESports é uma loja de materiais esportivos com uma ampla variedade de produtos de alta qualidade para atender atletas e entusiastas de esportes de todas as modalidades. Com um ambiente acolhedor, equipe experiente e compromisso com a comunidade esportiva, <br> a loja se destaca como um destino de escolha para quem busca equipamentos esportivos de qualidade.
+    ESports é uma loja de materiais esportivos com uma ampla variedade de produtos de alta qualidade para atender atletas e entusiastas de esportes de todas as modalidades.<br>Com um ambiente acolhedor, equipe experiente e compromisso com a comunidade esportiva, a loja se destaca como um destino de escolha para quem busca equipamentos esportivos de qualidade.
     </p> 
     <hr>
     
@@ -55,7 +55,7 @@
        <li> Cartão de Crédito</li>
        <li> Débito</li>
        <li> Boleto </li>
-       <img class="fotos" src="imgs/pagamentos.png" width="350" height="300"">
+       <img class="fotos" src="imgs/pagamentos.png" width="350" height="350"">
     </ul>
     
     <hr>
