--- a/Esporte/Basquete/index.html
+++ b/Esporte/Basquete/index.html
@@ -18,8 +18,7 @@
         </nav>
  </header>
       <h2> Informações sobre o basquete </h2>
-      <p> O basquete é um esporte coletivo jogado por duas equipes de cinco jogadores. O objetivo é marcar pontos arremessando a bola através do aro adversário, que está a 3,05 metros de altura. A partida ocorre em uma quadra retangular e é marcada por rápidas transições entre ataque e defesa. Os jogadores utilizam habilidades como drible, passe e arremesso, e o jogo é conhecido por sua intensidade e ação contínua. É praticado em diversos níveis, desde competições locais até torneios internacionais como a NBA e os Jogos Olímpicos.
-      <p><a href= "https://brasilescola.uol.com.br/educacao-fisica/basquetebol.htm"<</p>
-</p>
+      <p> O basquete é um esporte coletivo jogado por duas equipes de cinco jogadores. O objetivo é marcar pontos arremessando a bola através do aro adversário, que está a 3,05 metros de altura.<br> A partida ocorre em uma quadra retangular e é marcada por rápidas transições entre ataque e defesa. Os jogadores utilizam habilidades como drible, passe e arremesso, e o jogo é conhecido por sua intensidade e ação contínua. É praticado em diversos níveis, desde competições locais até torneios internacionais como a NBA e os Jogos Olímpicos.</p>
+      <p> <a href="https://brasilescola.uol.com.br/educacao-fisica/basquetebol.htm"> Mais informações sobre o site </a></p>
 </body>
 </html>
