mensagem de commit

--- a/Esporte/Basquete/index.html
+++ b/Esporte/Basquete/index.html
@@ -24,8 +24,8 @@
       <h2> PRODUTOS DIPONIVEIS </h2>
 
       <h3>Bola de Basquete Profissional Wilson</h3>
-      
-       <img src="/imgs/basquete.jpg">
+
+       <img src="/imgs/basquete.jpg"width="300" height="300">
 
        <p> Valor: R$79,06 <br>!Frete GRÁTIS!</p>
 
