mensagem de commit

--- a/Esporte/Volei/index.html
+++ b/Esporte/Volei/index.html
@@ -17,7 +17,8 @@
             </ul>
         </nav>
  </header> 
-   <h2>Informações sobre o vôlei/h2>
+   <h2>Informações sobre o vôlei</h2>
+   
     <p>O vôlei é um esporte coletivo jogado por duas equipes de seis jogadores em uma quadra dividida por uma rede. O objetivo é enviar a bola sobre a rede e fazê-la tocar o chão na área adversária. Cada equipe pode tocar a bola até três vezes antes de enviá-la para o outro lado.<br> O jogo é disputado em sets e a equipe que vencer pelo menos três sets ganha a partida. O vôlei exige habilidades como saque, passe, levantamento, ataque e bloqueio. É popular em todo o mundo e também tem uma versão de praia. Além de ser um ótimo exercício, promove a coordenação e o trabalho em equipe.</p>
     <p><a href="https://brasilescola.uol.com.br/educacao-fisica/voleibol.htm">Mais informações sobre o vôlei</a></p>
 </body>
