mensagem de commit

--- a/Esporte/Basquete/index.html
+++ b/Esporte/Basquete/index.html
@@ -29,6 +29,16 @@
 
        <p> Valor: R$79,06 <br>!Frete GRÁTIS!</p>
 
+       <h3>Uniforme chicago bulls</h3>
+
+       <img src="/imgs/uniforme basquete.webp"width="300" height="300">
+
+       <p> Valor: R$390,90 <br>!Frete GRÁTIS!</p>
+
+       <h3>Tênis de basquete masculino Lebron Witness 5</h3>
+       <img src="/imgs/tenis lebron.jpg"width="300" height="300">
+       <p> Valor: R$899,99 <br>!Frete GRÁTIS!</p>
+
        
 
 
