mensagem de commit

--- a/Esporte/Volei/index.html
+++ b/Esporte/Volei/index.html
@@ -22,6 +22,17 @@
     <p>O vôlei é um esporte coletivo jogado por duas equipes de seis jogadores em uma quadra dividida por uma rede. O objetivo é enviar a bola sobre a rede e fazê-la tocar o chão na área adversária. Cada equipe pode tocar a bola até três vezes antes de enviá-la para o outro lado.<br> O jogo é disputado em sets e a equipe que vencer pelo menos três sets ganha a partida. O vôlei exige habilidades como saque, passe, levantamento, ataque e bloqueio. É popular em todo o mundo e também tem uma versão de praia. Além de ser um ótimo exercício, promove a coordenação e o trabalho em equipe.</p>
     <p><a href="https://brasilescola.uol.com.br/educacao-fisica/voleibol.htm">Mais informações sobre o vôlei</a></p>
 
+    <h2>PRODUTOS DISPONIVEIS</h2>
+
+    <h3>Bola de Vôlei Mikasa</h3
+    <img src="/imgs/mikasa.jpg"width="300" height="300">
+    <p> Valor: R$635,09 <br> !Frete GRÁTIS!</p>
+
+    <h3> Tênis de vôlei 2 cores </h3>
+    <img src="/imgs/volei 2 cores.webp"width="300" height="300">
+    <p> Valor: R$350,00 <br> !Frete GRÁTIS!</p>
     
+
+
 </body>
 </html>
