mensagem de commit

--- a/Esporte/Volei/index.html
+++ b/Esporte/Volei/index.html
@@ -24,7 +24,7 @@
 
     <h2>PRODUTOS DISPONIVEIS</h2>
 
-    <h3>Bola de Vôlei Mikasa</h3
+    <h3>Bola de Vôlei Mikasa</h3>
     <img src="/imgs/mikasa.jpg"width="300" height="300">
     <p> Valor: R$635,09 <br> !Frete GRÁTIS!</p>
 
