mensagem de commit

--- a/Esporte/Basquete/index.html
+++ b/Esporte/Basquete/index.html
@@ -36,7 +36,9 @@
         <p> Valor: R$390,90 <br>!Frete GRÁTIS!<br> DISPONIVEL NOS TAMANHOS: P, M, G, GG, XG</p>
         <h4>Descrição do produto</h4>
         <p>- Camisa Regata.<br>
-            - Ótimo material, muito confortável e estica.</p>
+            - Ótimo material, muito confortável e estica.<br>
+           - Bermuda. <br>
+            - Composição: 100% poliéster</p>
         </li>
            
     <li><h3>Tênis de basquete masculino Lebron Witness 5</h3>
