mensagem de commit

--- a/Esporte/Basquete/index.html
+++ b/Esporte/Basquete/index.html
@@ -21,7 +21,7 @@
       <p> O basquete é um esporte coletivo jogado por duas equipes de cinco jogadores. O objetivo é marcar pontos arremessando a bola através do aro adversário, que está a 3,05 metros de altura.<br> A partida ocorre em uma quadra retangular e é marcada por rápidas transições entre ataque e defesa. Os jogadores utilizam habilidades como drible, passe e arremesso, e o jogo é conhecido por sua intensidade e ação contínua. É praticado em diversos níveis, desde competições locais até torneios internacionais como a NBA e os Jogos Olímpicos.</p>
       <p> <a href="https://brasilescola.uol.com.br/educacao-fisica/basquetebol.htm"> Mais informações sobre o esporte </a></p>
 
-      <h2> PRODUTOS DIPONIVEIS </h2>
+      <h2> PRODUTOS DIPONÍVEIS </h2>
       <ul>
 
     <li><h3>Bola de Basquete Profissional Wilson</h3>
