--- a/Esporte/Volei/index.html
+++ b/Esporte/Volei/index.html
@@ -8,7 +8,7 @@
 <body>
     <header>
         <img src="/imgs/ESports_Logo.png" alt="logo">
-        <h1>E_Sports</h1> 
+        <h1>E-Sports</h1> 
         <nav>
             <ul>
                 <li><a href="/index.html"> Página Inicial</a></li>
@@ -23,15 +23,23 @@
     <p><a href="https://brasilescola.uol.com.br/educacao-fisica/voleibol.htm">Mais informações sobre o vôlei</a></p>
 
     <h2>PRODUTOS DISPONIVEIS</h2>
-
-    <h3>Bola de Vôlei Mikasa</h3>
-    <img src="/imgs/mikasa.jpg"width="300" height="300">
-    <p> Valor: R$635,09 <br> !Frete GRÁTIS!</p>
-
-    <h3> Tênis de vôlei 2 cores </h3>
-    <img src="/imgs/volei 2 cores.webp"width="300" height="300">
-    <p> Valor: R$350,00 <br> !Frete GRÁTIS!</p>
+    <ul> 
+    <li><h3>Bola de Vôlei Mikasa</h3>
+        <img src="/imgs/mikasa.jpg"width="300" height="300">
+        <p> Valor: R$635,09 <br> !Frete GRÁTIS!<br>TAMANHO ÚNICO</p>
+        <h4>Descrição do produto</h4>
+        <p>A Mikasa é líder de bolas no mundo e é a marca oficial nas principais categorias e competições. Com superfície em material sintético e semelhante a bola V200W, a bola oficial de Competições e Mundiais tem o melhor custo-benefício entre as bolas de couro da Mikasa. Aprovada pela FIVB - Federação Internacional de Voleibol.</p>
+    </li>
     
+    <li><h3> Tênis Nike Precision VI Masculino Preto e Branco </h3>
+        <img src="/imgs/volei tenis.webp"width="300" height="300">
+        <p> Valor: R$350,00 <br> !Frete GRÁTIS!<br>DISPONIVEL NOS TAMANHOS: 40, 41, 42, 43</p>
+        <h4>Descrição do produto</h4>
+        <p>Crie espaço, pare e drible com o Nike Precision 6 FlyEase. Ele foi criado para permitir que jogadores rápidos mudem de velocidade e de direção, mantendo-se no controle. Desde a boca e a língua macias até o padrão de tração espinha de peixe modificado, esse ágil tênis de cano baixo permite que você dê o máximo de si enquanto acelera o ritmo.</p>
+    </li>
+</ul>
+
+   
 
 
 </body>
