mensagem de commit

--- a/Esporte/Futebol/index.html
+++ b/Esporte/Futebol/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>E-sports - Futebol</title>
 </head>
 <body>
     <header>
         <img src="/imgs/ESports_Logo.png" alt="logo">
-        <h1>ESports</h1> 
+        <h1>E-Sports</h1> 
         <nav>
             <ul>
                 <li><a href="/index.html"> Página Inicial</a></li>
@@ -17,5 +17,24 @@
             </ul>
         </nav>
  </header>
+  <h2>Informações sobre o futebol</h2>
+  <p>O futebol, desenvolvido na Inglaterra no século 19, é um dos esportes mais populares do mundo. O jogo é disputado entre duas equipes de 11 jogadores, com o objetivo de marcar mais gols que o adversário. As principais competições incluem a Copa do Mundo e a Liga dos Campeões da UEFA. Entre os clubes notáveis estão Barcelona e Real Madrid, e jogadores icônicos como Pelé, Maradona, Messi e Cristiano Ronaldo são amplamente reconhecidos. O futebol é conhecido por sua rica história, impacto global e diversas táticas de jogo.</p>
+  <p><a href="https://monografias.brasilescola.uol.com.br/educacao-fisica/futebol-origens-e-regras-no-brasil-e-no-mundo.htm">Mais informações sobre o esporte</a></p>
+   
+  <h2>PRODUTOS DISPONÍVEIS</h2>
+  
+  <ul>
+    <li><h3>Chuteira Nike Air Zoom Mercurial Vapor 16 Elite Campo</h3>
+        <img src="/imgs/chuteira.nike.webp" width="300" height="300">
+        <p> Valor: R$389,99 <br>!Frete GRÁTIS!<br> DISPONIVEL NOS TAMANHOS: 39, 40, 41, 42, 43</p>
+        <h4>Descrição do produto</h4>
+        <p>A Chuteira Nike Air Zoom Mercurial Vapor 16 Elite Campo é a escolha definitiva para jogadores profissionais que desejam dominar o campo de futebol com velocidade e precisão.</p>
+
+
+    </li>
+  </ul>
+
+
+
 </body>
 </html>
