--- a/Esporte/Volei/index.html
+++ b/Esporte/Volei/index.html
@@ -22,7 +22,7 @@
     <p>O vôlei é um esporte coletivo jogado por duas equipes de seis jogadores em uma quadra dividida por uma rede. O objetivo é enviar a bola sobre a rede e fazê-la tocar o chão na área adversária. Cada equipe pode tocar a bola até três vezes antes de enviá-la para o outro lado.<br> O jogo é disputado em sets e a equipe que vencer pelo menos três sets ganha a partida. O vôlei exige habilidades como saque, passe, levantamento, ataque e bloqueio. É popular em todo o mundo e também tem uma versão de praia. Além de ser um ótimo exercício, promove a coordenação e o trabalho em equipe.</p>
     <p><a href="https://brasilescola.uol.com.br/educacao-fisica/voleibol.htm">Mais informações sobre o vôlei</a></p>
 
-    <h2>PRODUTOS DISPONIVEIS</h2>
+    <h2>PRODUTOS DISPONÍVEIS</h2>
     <ul> 
     <li><h3>Bola de Vôlei Mikasa</h3>
         <img src="/imgs/mikasa.jpg"width="300" height="300">
@@ -33,7 +33,7 @@
     
     <li><h3> Tênis Nike Precision VI Masculino Preto e Branco </h3>
         <img src="/imgs/volei tenis.webp"width="300" height="300">
-        <p> Valor: R$350,00 <br> !Frete GRÁTIS!<br>DISPONIVEL NOS TAMANHOS: 40, 41, 42, 43</p>
+        <p> Valor: R$350,00 <br> !Frete GRÁTIS!<br>DISPONÍVEL NOS TAMANHOS: 40, 41, 42, 43</p>
         <h4>Descrição do produto</h4>
         <p>Crie espaço, pare e drible com o Nike Precision 6 FlyEase. Ele foi criado para permitir que jogadores rápidos mudem de velocidade e de direção, mantendo-se no controle. Desde a boca e a língua macias até o padrão de tração espinha de peixe modificado, esse ágil tênis de cano baixo permite que você dê o máximo de si enquanto acelera o ritmo.</p>
     </li>
