mensagem de commit

--- a/Esporte/Futebol/index.html
+++ b/Esporte/Futebol/index.html
@@ -29,8 +29,19 @@
         <p> Valor: R$389,99 <br>!Frete GRÁTIS!<br> DISPONIVEL NOS TAMANHOS: 39, 40, 41, 42, 43</p>
         <h4>Descrição do produto</h4>
         <p>A Chuteira Nike Air Zoom Mercurial Vapor 16 Elite Campo é a escolha definitiva para jogadores profissionais que desejam dominar o campo de futebol com velocidade e precisão.</p>
+    </li>
+    <li><h3>Bola de Futebol Copa Do Mundo Feminina Adidas Oceaunz League</h3>
+        <img src="/imgs/bola_de_futebol.webp" width="300" height="300">
+        <p> Valor: R$349,99 <br>!Frete GRÁTIS!<br>TAMANHO ÚNICO</p>
+        <h4>Descrição do produto</h4>
+        <p>Sinta-se dentro de campo com a Bola de Futebol Copa Do Mundo Feminina Adidas Oceaunz League! Inspirada na beleza natural dos países-sede, Austrália e Nova Zelândia, essa bola Copa do Mundo Feminina apresenta design fluído, vibrante e único. A estrutura costurada à máquina e o revestimento resistente de TPU garantem a durabilidade durante os jogos. </p>
+    </li>
 
-
+    <li><h3>Meião Penalty Max</h3>
+        <img src="/imgs/meiao.webp" width="300" height="300">
+        <p> Valor: R$49,99 <br>!Frete GRÁTIS!<br>TAMANHOS DISPONÍVEIS: 39, 40, 41</p>
+        <h4>Descrição do produto</h4>
+        <p>Garantia de máximo conforto para completar seu uniforme de futebol, o meião da Penalty, modelo Max, é a melhor opção para os atletas. Produzido com fios especiais para maior ventilação e durabilidade, o produto traz proteção especial no tornozelo. </p>
     </li>
   </ul>
 
