mensagem de commit

--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
 
   <div class="produtos">
 
-    <a href="esporte/basquete/index.html"><img src="imgs/basquete.jpg" width="300" height="300"> </a> 
+    <a href="Esporte/Basquete/index.html"><img src="imgs/basquete.jpg" width="300" height="300"> </a> 
     <p> Bola de Basquete Profissional Wilson <br> Valor: R$79,06 <br>!Frete GRÁTIS! </p>
-    <a href="esporte/futebol/index.html" ><img src="imgs/bola_de_futebol.webp" width="300" height="300"> </a> 
+    <a href="Esporte/Futebol/index.html" ><img src="imgs/bola_de_futebol.webp" width="300" height="300"> </a> 
     <p> Bola de Futebol Profissional Adidas <br> Valor: R$58,97 <br> !Frete GRÁTIS! </p>
-    <a href="esporte/volei/index.html">
+    <a href="Esporte/Volei/index.html">
       <img src="imgs/mikasa.jpg" width="300" height="300""> </a> 
     <p> Bola de Vôlei Mikasa <br> Valor: R$635,09 <br> !Frete GRÁTIS! </p>
 
