mensagem de commit

--- a/Esporte/Volei/index.html
+++ b/Esporte/Volei/index.html
@@ -22,6 +22,7 @@
     <p>O vôlei é um esporte coletivo jogado por duas equipes de seis jogadores em uma quadra dividida por uma rede. O objetivo é enviar a bola sobre a rede e fazê-la tocar o chão na área adversária. Cada equipe pode tocar a bola até três vezes antes de enviá-la para o outro lado.<br> O jogo é disputado em sets e a equipe que vencer pelo menos três sets ganha a partida. O vôlei exige habilidades como saque, passe, levantamento, ataque e bloqueio. É popular em todo o mundo e também tem uma versão de praia. Além de ser um ótimo exercício, promove a coordenação e o trabalho em equipe.</p>
     <p><a href="https://brasilescola.uol.com.br/educacao-fisica/voleibol.htm">Mais informações sobre o vôlei</a></p>
 
+    <hr>
     <h2>PRODUTOS DISPONÍVEIS</h2>
     <ul> 
     <li><h3>Bola de Vôlei Mikasa</h3>
@@ -42,8 +43,7 @@
         <img src="/imgs/joelheira volei.webp"width="300" height="300">
         <p> Valor: R$70,00 <br> !Frete GRÁTIS!<br>DISPONÍVEL NOS TAMANHOS: M, G</p>
         <h4>Descrição do produto</h4>
-        <p>JOELHEIRA ELÁSTICA VOLEI FÊNIX;<br> LINHA ELÁSTICA IDEAL PARA A PROTEÇÃO NA PRÁTICA DE ESPORTES DE ALTO IMPACTO;<br> PROPORCIONA MAIOR SEGURANÇA NA REGIÃO DO JOELHO;<br> PERFEITA PARA JOGAR VÔLEI
-            </p>
+        <p>JOELHEIRA ELÁSTICA VOLEI FÊNIX;<br> LINHA ELÁSTICA IDEAL PARA A PROTEÇÃO NA PRÁTICA DE ESPORTES DE ALTO IMPACTO;<br> PROPORCIONA MAIOR SEGURANÇA NA REGIÃO DO JOELHO;<br> PERFEITA PARA JOGAR VÔLEI</p>
     </li>
 </ul>
 
