--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <p> Bola de Vôlei Mikasa <br> Valor: R$635,09 <br> !Frete GRÁTIS! </p>
 
   </div>
-  
+    <hr>
     <h2>Sobre nossa Loja </h2>
 
   <div class="texto"> 
@@ -56,6 +56,7 @@
        <li> Cartão de Crédito</li>
        <li> Débito</li>
        <li> Boleto </li>
+       <li> PIX </li>
        <img class="fotos" src="imgs/pagamentos.png" width="500" height="350"">
     </ul>
     
