mensagem de commit

--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
     
     <hr>
     <h3> Proprietario do estabelecimento</h3>
-    <p>
-      Kauê Lion Franca Matos 
-    </p>
+    <p>Kauê Lion Franca Matos</p>
+    <p>e-mail para contato: klfm@aluno.ifnmg.edu.br</p>
+
   </div>
 </ul>
 </body>
